--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,8 @@ a {
 
 nav.sticky {
   background-color: white;
-  top: 10px
+  top: 10px;
+  box-shadow: 2px 2px 40px rgba(231, 228, 228, 0.867);
 }
 
 nav.sticky ul li a,
