--- a/src/index.css
+++ b/src/index.css
@@ -6,9 +6,6 @@
   list-style-type: none;
 }
 
-body {
-  min-height: 200vh;
-}
 
 a {
   color: white;
@@ -16,13 +13,14 @@ a {
 }
 
 nav.sticky {
+
   background-color: white;
-  top: 10px;
+  top: 5px;
   box-shadow: 2px 2px 40px rgba(231, 228, 228, 0.867);
 }
 
 nav.sticky ul li a,
-nav.sticky li .logo {
+nav.sticky svg {
   color: #541554;
 }
 
@@ -36,3 +34,5 @@ nav.sticky .tryForFree {
   background-color: #541554;
   color: white;
 }
+
+@media only screen and (max-width: 600px) {}
